Sets language level to Java 8 and sets up executable jarring.
For easy install, users need to be able to edit a config file outside of the jar.  Creates the ability to do so by passing in a java system arg for the config directory.